// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe mostrar el componente con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Coffee Mug - Con Imagen"
    className="productImg undefined"
    src="./coffee-mug2.png"
  />
</div>
`;

exports[`ProductImage debe mostrar el componente correctament con la imagen personalizada 1`] = `
<img
  alt="No image"
  className="productImg undefined"
  src="./coffee-mug2.png"
/>
`;
